# NicoliveChrome

./: About_NPAPI.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO_LIST.txt  back-ground.html  back-ground.js  download.html  index.html  manifest.json  popup.html  popup.js  updates.xml
css/: index.css  popup.css
cxx/: .CMakeLists.txt.swp  CMakeLists.txt  config.hpp.in
cxx/boost/: README
js/: back-ground.js  nicolive_chrome.js  popup.js  w_user_info.js
lib/: indexedDB.js  nico.live.js
lib/flexigrid-1.1/css/: flexigrid.origin.css
lib/flexigrid-1.1/js/: flexigrid.js
npapisdk/include/: npapi.h
npapisdk/include/.svn/: all-wcprops  entries
npapisdk/old_include/: npapi.h
npapisdk/samples/.svn/: entries
npapisdk/samples/mac-basic/.svn/: entries
npapisdk/samples/mac-basic/BasicPlugin.xcodeproj/.svn/: entries
npapisdk/samples/mac-basic/English.lproj/.svn/: entries
npapisdk/samples/unix-basic/.svn/: entries
package/: nicolive_chrome.crx
src/: back-ground.coffee  back-ground.html  back-ground.js  manifest.json  nlcm.coffee  nlcm.js
src/core/: indexedDB.coffee  indexedDB.js  nico.comment.coffee  nico.comment.js  nico.community.coffee  nico.community.js  nico.live.coffee  nico.live.coffee~  nico.live.js  nico.user.coffee  nico.user.js  util.coffee  util.js
src/lib/: popupmenu.js
src/lib/flexigrid-1.1/js/: flexigrid.origin.js
src/ui/: color_slider.coffee  color_slider.js  comment.coffee  comment.js  context.coffee  context.js
src/view/: index.coffee  index.css  index.html  index.js  user_info.coffee  user_info.html  user_info.js
